Fixes footer spacing

--- a/template/book/sass/main.scss
+++ b/template/book/sass/main.scss
@@ -13,7 +13,7 @@ html,body {
   width: 600px;
   //overflow: hidden;
 
-  margin: 80px auto;
+  margin: 80px auto 0 auto;
   display: none;
 
   &.visible {
